[package]
name = "yamaha_avr"
description = "A Library and CLI Tool for interaction with Yamaha AVRs"
version = "0.2.0"
authors = ["Max <maxjoehnk@gmail.com>"]
repository = "https://github.com/maxjoehnk/yamaha-avr-rs"
readme = "README.md"
keywords = ["yamaha", "avr"]
categories = ["command-line-utilities", "api-bindings"]
license = "GPL-3.0"

[[bin]]
name = "yamaha-avr"
doc = false

[badges]
travis-ci = { repository = "maxjoehnk/yamaha-avr-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "maxjoehnk/yamaha-avr-rs" }
is-it-maintained-open-issues = { repository = "maxjoehnk/yamaha-avr-rs" }
maintenance = { status = "actively-developed" }

[dependencies]
futures = "0.1"
hyper = "0.11"
tokio-core = "0.1"
clap = "2.26.2"
xml-rs = "0.6.1"
regex = "0.2.2"